update authen